Learning-Journey-Udemy/project_de_1_ETL/airflow/logs/dag_id=dag_project_de_etl/run_id=manual__2026-04-27T163048.043843+0000/task_id=create_table/attempt=1.log
[2026-04-27T16:30:52.760+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-04-27T16:30:52.783+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_project_de_etl.create_table manual__2026-04-27T16:30:48.043843+00:00 [queued]>
[2026-04-27T16:30:52.790+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_project_de_etl.create_table manual__2026-04-27T16:30:48.043843+00:00 [queued]>
[2026-04-27T16:30:52.791+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2026-04-27T16:30:52.800+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_table> on 2026-04-27 16:30:48.043843+00:00
[2026-04-27T16:30:52.806+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dag_project_de_etl', 'create_table', 'manual__2026-04-27T16:30:48.043843+00:00', '--job-id', '24', '--raw', '--subdir', 'DAGS_FOLDER/dag_etl.py', '--cfg-path', '/tmp/tmpyaze6kft']
[2026-04-27T16:30:52.808+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=554) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-04-27T16:30:52.810+0000] {standard_task_runner.py:91} INFO - Job 24: Subtask create_table
[2026-04-27T16:30:52.810+0000] {standard_task_runner.py:63} INFO - Started process 555 to run task
[2026-04-27T16:30:52.889+0000] {task_command.py:426} INFO - Running <TaskInstance: dag_project_de_etl.create_table manual__2026-04-27T16:30:48.043843+00:00 [running]> on host 68faae90260f
[2026-04-27T16:30:52.959+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='dimas' AIRFLOW_CTX_DAG_ID='dag_project_de_etl' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2026-04-27T16:30:48.043843+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-04-27T16:30:48.043843+00:00'
[2026-04-27T16:30:52.960+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-04-27T16:30:52.969+0000] {sql.py:276} INFO - Executing: create table if not exists books (
    id serial,
    title text not null,
    author_name text,
    first_publish_year text,
);
[2026-04-27T16:30:52.980+0000] {base.py:84} INFO - Using connection ID 'books_connection' for task execution.
[2026-04-27T16:30:52.988+0000] {base.py:84} INFO - Using connection ID 'books_connection' for task execution.
[2026-04-27T16:30:53.001+0000] {sql.py:487} INFO - Running statement: create table if not exists books (
    id serial,
    title text not null,
    author_name text,
    first_publish_year text,
);, parameters: None
[2026-04-27T16:30:53.008+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-04-27T16:30:53.009+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 6: );
        ^

[2026-04-27T16:30:53.023+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=dag_project_de_etl, task_id=create_table, run_id=manual__2026-04-27T16:30:48.043843+00:00, execution_date=20260427T163048, start_date=20260427T163052, end_date=20260427T163053
[2026-04-27T16:30:53.036+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 24 for task create_table (syntax error at or near ")"
LINE 6: );
        ^
; 555)
[2026-04-27T16:30:53.066+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-04-27T16:30:53.079+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-04-27T16:30:53.081+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
